gcc/testsuite/rust/rustc/ui/parser/issue-15914.rs
fn main() {
    let ref
        (); // { dg-error "" "" { target *-*-* } }
}

